src/main/java/com/example/udon_server/global/error/exception/BusinessException.java
package com.example.udon_server.global.error.exception;

import com.example.udon_server.global.error.data.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode){
        super();
        this.errorCode = errorCode;
    }
}
